<resources>
    <string name="app_name">MovieApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_tab_drama">Драма</string>
    <string name="text_tab_action">Боевики</string>
    <string name="text_tab_comedy">Комедия</string>
    <string name="text_tab_horror">Ужасы</string>
    <string name="text_tab_animated">Мульт</string>
    <string name="text_tab_favorite_list">Избранное</string>
    <string name="cd_image_app_bar">фоновое изображение лицо Will Smith</string>
    <string name="cd_poster">постер фильма</string>
    <string name="text_fab_play">Смотреть</string>
    <string name="title_actors">Актеры</string>
    <string name="title_trailers">Трейлеры</string>
    <string name="menu_item_text_share">поделиться</string>
    <string name="menu_item_text_like">Нравится</string>
    <string name="text_no_internet">Проветьте соединение с интернетом</string>
    <string name="text_btn_reload">Обновить</string>
    <string name="adult_content">18+</string>
    <string name="title_text">МОЁ КИНО</string>
    <string name="adult_content_text">Взрослый контент</string>
    <string name="contacts_menu_text">Контакты</string>
    <string name="language_item_text">Язык</string>
    <string name="show_on_map">показать на карте</string>
    <string name="send_push">Отправить Push</string>
</resources>