<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/black"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background_item"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="bottom"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gradient_app_bar"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_toolbar"
                    app:navigationIcon="@drawable/ic_arrow_back_24"
                    app:titleTextColor="@color/white"
                    tools:title="Название" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/text_fab_play"
                    android:textAppearance="@style/StyleTextTab"
                    app:icon="@drawable/ic_play"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/top_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_horizontal_rule"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/open_sans"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/top_line"
                    tools:text="@tools:sample/lorem/random" />

                <TextView
                    android:id="@+id/title_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/title_trailers"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_description" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/container_scroll_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_trailer">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_1"
                            android:layout_width="130dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="8dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/background_item" />

                        <ImageView
                            android:id="@+id/image_2"
                            android:layout_width="130dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/background_item" />

                        <ImageView
                            android:id="@+id/image_3"
                            android:layout_width="130dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/background_item" />

                        <ImageView
                            android:id="@+id/image_4"
                            android:layout_width="130dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/background_item" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

                <TextView
                    android:id="@+id/title_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/title_actors"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container_scroll_trailer" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/container_scroll_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_actors">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_actors"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_actor" />

                </androidx.core.widget.NestedScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/text_no_internet"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/red"
            android:text="@string/text_btn_reload"
            android:textSize="16sp" />

    </FrameLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <include layout="@layout/detail_shimmer" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</FrameLayout>